syntax = "proto2";
option optimize_for = LITE_RUNTIME;

package DevShellCredentials;

message CredentialInfoRequest {
}

message CredentialInfoResponse {
  required string user_email   = 1;
  optional string project_id   = 2;
  optional string access_token = 3;
}

service CredentialService {
  rpc GetCredentialInfo (CredentialInfoRequest) returns (CredentialInfoResponse);
}

